# MLOPS_ARTIFIN

./: .gitignore  Irisdata_EDA.ipynb  pyproject.toml
01_model_tracking/: Irisdata_Classification.ipynb
01_model_tracking/mlruns/316585724729739867/: meta.yaml
01_model_tracking/mlruns/316585724729739867/00f9500cfd294e33bf619f9a82025229/: meta.yaml
01_model_tracking/mlruns/316585724729739867/246d0e6d177a4a5a999ff698288596d3/: meta.yaml
01_model_tracking/mlruns/316585724729739867/2771d2f7fa0f419a8802ab4c8da18079/: meta.yaml
01_model_tracking/mlruns/316585724729739867/347f8e53c55d4e688856cd42c051945c/: meta.yaml
01_model_tracking/mlruns/316585724729739867/3c5089da30fe453fbace9a1b6aea6b56/: meta.yaml
01_model_tracking/mlruns/455644135536071933/: meta.yaml
02_training_pipeline/: pipeline.py
03_deployment/webservices/: Dockerfile  predict.py  test_predict.py
03_dockerization_and_deployment/: debug.ipynb
03_dockerization_and_deployment/batch/: deploy.py  train_predict_scheduled.py
03_dockerization_and_deployment/batch/outputs/: batch_predictions_7be1293f3fc447239b73c82412ad6393.csv
03_dockerization_and_deployment/webservices/: mlflow.db  scaler.joblib  test_predict.py
05_monitoring/: README.md  docker-compose.yaml
05_monitoring/data/: reference.csv
05_monitoring/data/current_batches/: 2d4bf32d.csv  2de23077.csv  6f238b37.csv  75f818e6.csv  778ec658.csv  783de072.csv  7a7701bf.csv  b77821cb.csv  d1f8b0d1.csv  d3313972.csv
05_monitoring/scripts/: calculate_metrics.py  generate_batch.py  prepare_reference.py
(+344 files in other folders)
